<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/layout_padding_h">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout style="@style/comm_layout_two">

            <TextView
                android:id="@+id/tv_name"
                style="@style/personal_detail_title"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:text="收  件  人" />

            <EditText
                android:id="@+id/address_add_frg_edt_receiver"
                style="@style/referral_info_status_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:layout_toRightOf="@+id/tv_name"
                android:background="@color/transparent"
                android:hint="@string/address_receiver_hint"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            style="@style/line_horStyle"
            android:layout_marginLeft="@dimen/layout_margin_h" />


        <RelativeLayout style="@style/comm_layout_two">

            <TextView
                android:id="@+id/tv_medical"
                style="@style/personal_detail_title"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:text="@string/address_phone" />

            <EditText
                android:id="@+id/address_add_frg_edt_phone"
                style="@style/referral_info_status_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:layout_toRightOf="@+id/tv_medical"
                android:background="@color/transparent"
                android:hint="@string/address_phone_hint"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            style="@style/line_horStyle"
            android:layout_marginLeft="@dimen/layout_margin_h" />

        <RelativeLayout style="@style/comm_layout_two">

            <TextView
                android:id="@+id/tv_patient"
                style="@style/personal_detail_title"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:text="@string/address_area" />

            <TextView
                android:id="@+id/address_add_frg_tv_area"
                style="@style/referral_info_status_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:layout_toRightOf="@+id/tv_patient"
                android:background="@color/transparent"
                android:hint="@string/address_area_hint"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            style="@style/line_horStyle"
            android:layout_marginLeft="@dimen/layout_margin_h" />


        <RelativeLayout style="@style/comm_layout_two">

            <TextView
                android:id="@+id/tv_phone"
                style="@style/personal_detail_title"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:text="@string/address_detail" />

            <EditText
                android:id="@+id/address_add_frg_edt_detail"
                style="@style/referral_info_status_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:layout_toRightOf="@+id/tv_phone"
                android:background="@color/transparent"
                android:hint="@string/address_detail_hint"
                android:inputType="phone"
                android:singleLine="true" />
        </RelativeLayout>

        <View style="@style/line_horStyle" />


        <RelativeLayout style="@style/comm_layout_two">

            <TextView
                android:id="@+id/address_default"
                style="@style/personal_detail_title"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:text="@string/address_default" />

            <TextView
                style="@style/personal_detail_title"
                android:layout_below="@+id/address_default"
                android:layout_marginLeft="@dimen/layout_margin_l"
                android:text="@string/address_default_hint" />

            <ToggleButton
                android:id="@+id/address_add_frg_tb_default"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin_l"
                android:background="@drawable/toggle_button_selector"
                android:button="@null"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/address_add_frg_tv_save"
        style="@style/comm_select_yellow"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="保存" />
</RelativeLayout>